# MoellerTrumboreIntersectionAlgorithm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.sh  ground_truth.csv  out.txt  output.csv  output.xlsx  rotated_verts.csv  testCMAKE.txt  verts.csv  visible.csv
include/: check_visibility.h  check_visibility.hpp  check_visibility_parallel.cuh  check_visibility_sequential.h  check_visibility_sequential.hpp  fastRayTriangleIntersection.cu  fastRayTriangleIntersection.h  fastRayTriangleIntersection.hpp  fastRayTriangleIntersectionParallel.cu  fastRayTriangleIntersection_parallel.cuh  fastRayTriangleIntersection_sequential.h  fastRayTriangleIntersection_sequential.hpp  readCSV.h  readCSV.hpp
include/lib/: CheckError.cuh  CheckError.i.cuh  Timer.i.hpp
src/: ParallelFastRayTriangleIntersection.cu  check_visibility.cu  check_visibility_parallel.cu  check_visibility_sequential.cpp  fastRayTriangleIntersection.cu  fastRayTriangleIntersection.cuh  fastRayTriangleIntersection_parallel.cu  fastRayTriangleIntersection_sequential.cu  main.cu
